[package]
name = "lfkv-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
thiserror = "1.0.51"
crc32fast = "1.5.0"
libc = "0.2.182"
winapi = "0.3.9"

[dependencies.hashbrown]
version = "0.14.1"
default-features = false
features = ["raw"]

[dev-dependencies]
tempfile = "3.10.1"
rand = "0.8"

[workspace]
